fix(tool): sandbox shell environment state